minor corrections to the description

--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -23,7 +23,7 @@
 			</div>
 
 			<div class="description">
-				<p>Clone the starter kit and install npm modules.</p>
+				<p>Clone the starter kit and install npm modules</p>
 				<p>Good, all stuff is installed and imported, and if you want to learn more about my starter kit, let's dive
 					into it by visiting <a target="_blank" href="https://vbstarterkit.vextor.ru/">My Demo Website</a></p>
 			</div>
