ability to specify several entry points for JS files has been added

--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -7,11 +7,11 @@
 
 <body>
 
+	//= components/preloader/preloader.html
+
 	<div class="page">
 
-		//= components/preloader.html
-
-		//= components/header.html
+		//= components/header/header.html
 
 		<main class="main container">
 
@@ -23,14 +23,13 @@
 			</div>
 
 			<div class="description">
-				<p>Clone the starter kit from <a href="https://github.com/vladikslavus/vbstarterkit">github.com</a> and install npm modules</p>
-				<p>Good, all stuff is installed and imported, and if you want to learn more about my starter kit, let's dive
-					into it by visiting <a class="btn-link" target="_blank" href="https://vbstarterkit.vextor.ru/">My Demo Website</a></p>
+				<p>Clone the starter kit from <a target="_blank" href="https://github.com/vladikslavus/vbstarterkit">github.com</a> and install npm modules</p>
+				<p>Good, all stuff is installed and imported, and if you want to learn more about my starter kit, plz, visit <a class="btn-link" target="_blank" href="https://vbstarterkit.vextor.ru/">My Demo Website</a></p>
 			</div>
 
 		</main>
 
-		//= components/footer.html
+		//= components/footer/footer.html
 
 		<script src="js/main.min.js"></script>
 
